syntax = "proto3";

package clipboard;

message ClipMessage {
    enum msgtype {
        MSG_PUSH = 0;
        MSG_GET = 1;
        MSG_POP = 2;
        MSG_COUNT = 3;
        MON_WAIT = 4;
        MSG_PUSH_PADDING = 5;
    }

    uint32 st_size = 1;
    msgtype st_type = 2;
    uint32 st_name = 3;
    bool st_ispadding = 4;
    bytes st_padding = 5;
}